samples/_failures_safe/1761330720_12d9b5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9f240d0c.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_9f240d0c.c:165:43: error: expected ‘)’ at end of input
  165 |             parser_parse_expression(parser
      |                                    ~      ^
      |                                           )
./samples/SAFE/__tmp_9f240d0c.c:165:13: error: expected declaration or statement at end of input
  165 |             parser_parse_expression(parser
      |             ^~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_9f240d0c.c:165:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9f240d0c.c:165:13: error: expected declaration or statement at end of input
